--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,120 @@
+:root {
+  scroll-behavior: smooth;
+}
+
+a {
+  text-decoration: none;
+}
+
+.color-black {
+  color: #1e212b;
+}
+
+.color-red {
+  color: #fd3e67;
+}
+
+.color-blue {
+  color: #fd3e67;
+}
+
+.color-white {
+  color: white;
+}
+
+.background-black {
+  background-color: #1e212b;
+}
+
+.background-grey {
+  background-color: #c3d2d5;
+}
+
 body {
   color: #1e212b;
-  font-family: poppins;
+  font-family: "poppins", serif;
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background-color: #c3d2d5;
 }
 
-.navbar-container {
-  color: #c3d2d5;
-  background-color: #1e212b;
-  font-size: 1.2rem;
-}
-
-.navbar-container .nav-link {
-  color: #c3d2d5;
-}
-
-.navbar-container a.navbar-brand {
+nav .branding {
   color: #fd3e67;
-  font-size: 13rem;
 }
 
-.navbar-container a.active {
+main .hero-area-container {
+  min-height: 75vh;
+  background-color: #1e212b;
+}
+
+main .hero-area-container .hero-area {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  min-height: inherit;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  border: #ffe74c 2px solid;
+}
+
+main .hero-area-container .hero-area .greetings {
+  color: white;
+  text-transform: uppercase;
+  border: white 1px solid;
+}
+
+main .hero-area-container .hero-area .hero-text {
   color: #ffe74c;
+  text-transform: uppercase;
+  font-family: Comfortaa, sans-serif;
+  font-weight: lighter;
+  font-size: 21px;
+  border: white 1px solid;
+}
+
+main .hero-area-container .hero-area .about-me-summary {
+  font-family: Ubuntu, serif;
+  font-size: 12px;
+  border: white 1px solid;
+  padding-bottom: 2rem;
+}
+
+.fadeblacktogrey {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 10px;
+  background-color: #fd3e67;
+}
+
+.fadegreytoblack {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 10px;
+  background-color: #fd3e67;
+}
+
+.section-title {
+  margin-top: 2rem;
+  color: #fd3e67;
+  font-family: Comfortaa, serif;
+  font-size: 25px;
+}
+
+.section-sub-title {
+  color: #645dd7;
+  font-size: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
