--- a/css/style.scss
+++ b/css/style.scss
@@ -80,27 +80,26 @@ main {
                 font-family: Ubuntu, serif;
                 font-size: 12px;
                 border: white 1px solid;
-                padding-bottom: 2rem;
             }
         }
     }
 }
 
 .fadeblacktogrey {
-    //  TODO: Add this feature
+    //  TODO: Add linear gradient black -> grey
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 10px;
+    height: 30px;
     background-color: $site-red;
 }
 
 .fadegreytoblack {
-    //  TODO: Add this feature
+    //  TODO: Add linear gradient grey -> black
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 10px;
+    height: 30px;
     background-color: $site-red;
 }
 
@@ -114,4 +113,48 @@ main {
 .section-sub-title {
     color: $site-blue;
     font-size: 1rem;
+}
+
+#skills {
+    .cards-container {
+        display: flex;
+        .card {
+            height: 94px;
+            width: 87px;
+            display: flex;
+            padding: 0;
+            border: 0.5px solid $site-yellow;
+            img {
+                max-height: 68px;
+                max-width: 60px;
+            }
+        }
+    }
+    .ml-skills-container {
+        .card {
+            max-width: 255px;
+            max-height: 94px;
+            height: 94px;
+            border: $site-yellow 1px solid;
+            border-radius: 5px;
+            display: flex;
+            .card-body {
+                height: inherit;
+                display: flex;
+                align-items: center;
+                p {
+                    margin: 0;
+                    color: $site-blue;
+                    font-family: Comfortaa, serif;
+                    font-size: 14px;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                }
+            }
+        }
+    }
+    .more-skills {
+        font-family: Poppins, serif;
+        font-size: 0.8rem;
+    }
 }
