--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,7 @@ body {
   font-family: "poppins", serif;
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: #c3d2d5;
 }
 
@@ -48,32 +47,20 @@ main .hero-area-container {
   min-height: 75vh;
   background-color: #1e212b;
 }
-
 main .hero-area-container .hero-area {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
   min-height: inherit;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-around;
+  align-items: flex-start;
   border: #ffe74c 2px solid;
 }
-
 main .hero-area-container .hero-area .greetings {
   color: white;
   text-transform: uppercase;
   border: white 1px solid;
 }
-
 main .hero-area-container .hero-area .hero-text {
   color: #ffe74c;
   text-transform: uppercase;
@@ -82,7 +69,6 @@ main .hero-area-container .hero-area .hero-text {
   font-size: 21px;
   border: white 1px solid;
 }
-
 main .hero-area-container .hero-area .about-me-summary {
   font-family: Ubuntu, serif;
   font-size: 12px;
@@ -93,16 +79,18 @@ main .hero-area-container .hero-area .about-me-summary {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 30px;
-  background-color: #fd3e67;
+  height: 50px;
+  background: #1e212b;
+  background: linear-gradient(180deg, #1e212b 0%, #1e212b 26%, #c3d2d5 100%);
 }
 
 .fadegreytoblack {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 30px;
-  background-color: #fd3e67;
+  height: 50px;
+  background: #c3d2d5;
+  background: linear-gradient(180deg, #c3d2d5 0%, #c3d2d5 27%, #1e212b 74%);
 }
 
 .section-title {
@@ -118,47 +106,40 @@ main .hero-area-container .hero-area .about-me-summary {
 }
 
 #skills .cards-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 #skills .cards-container .card {
   height: 94px;
   width: 87px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 0;
   border: 0.5px solid #ffe74c;
 }
-
 #skills .cards-container .card img {
   max-height: 68px;
   max-width: 60px;
 }
-
+#skills .ml-skills-container {
+  display: flex;
+  flex-direction: column;
+}
 #skills .ml-skills-container .card {
   max-width: 255px;
+  width: 255px;
   max-height: 94px;
   height: 94px;
   border: #ffe74c 1px solid;
   border-radius: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  margin-bottom: 1rem;
 }
-
 #skills .ml-skills-container .card .card-body {
   height: inherit;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
-
 #skills .ml-skills-container .card .card-body p {
   margin: 0;
   color: #645dd7;
@@ -167,9 +148,24 @@ main .hero-area-container .hero-area .about-me-summary {
   font-weight: bold;
   text-transform: uppercase;
 }
-
-#skills .more-skills {
+#skills .ml-skills-container .card .card-body .muted-text {
   font-family: Poppins, serif;
   font-size: 0.8rem;
+  font-weight: lighter;
+  color: grey;
+  text-transform: none;
 }
+#skills .ml-skills-container .card:nth-child(odd) {
+  align-self: flex-end;
+}
+#skills .ml-skills-container .card:nth-child(odd) .card-body {
+  text-align: right;
+  align-items: flex-end;
+}
+#skills .more-skills {
+  font-family: Poppins, serif;
+  font-size: 0.7rem;
+  font-weight: lighter;
+}
+
 /*# sourceMappingURL=style.css.map */
