--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,16 @@ $white: white;
 
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+section {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   text-decoration: none;
 }
@@ -25,7 +35,7 @@ a {
 }
 
 .color-blue {
-  color: $site-red;
+  color: $site-blue;
 }
 
 .color-white {
@@ -118,6 +128,7 @@ main {
   color: $site-red;
   font-family: Comfortaa, serif;
   font-size: 25px;
+  font-weight: bold;
 }
 
 .section-sub-title {
@@ -215,5 +226,85 @@ main {
     color: $site-red;
     font-family: Comfortaa, serif;
     font-weight: bold;
+  }
+}
+
+#contact {
+  .form-container {
+    border: 1px solid $site-yellow;
+    border-radius: 21px;
+    padding: 2rem;
+    width: 100%;
+    margin-bottom: 2rem;
+
+    ::placeholder {
+      color: $site-blue;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 12px 20px;
+      margin-bottom: 8px;
+      box-sizing: border-box;
+      border: none;
+      border-bottom: 2px solid $site-blue;
+    }
+
+    textarea {
+      border-bottom: 2px solid $site-blue;
+    }
+
+    // Form Submit button
+    button[type=submit] {
+      background-color: $site-blue;
+      border-color: $site-blue;
+      width: 70%;
+      margin-top: 2rem;
+    }
+  }
+}
+
+.socials-container {
+  display: flex;
+
+  .col {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+    .social-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: white;
+      border-radius: 33px;
+      padding: 8px;
+      width: 28px;
+      height: 25px;
+      margin-bottom: 2rem;
+
+
+      img {
+        width: 15px;
+        height: 11px;
+      }
+    }
+  }
+}
+
+
+.text-small {
+  font-size: .7rem;
+}
+
+footer {
+
+  p {
+    color: $white;
+    text-align: center;
+    width: 100%;
+    font-family: Ubuntu, serif;
+    font-size: .7rem;
   }
 }
