--- a/css/style.scss
+++ b/css/style.scss
@@ -9,12 +9,13 @@ $site-yellow: #ffe74c;
 $white: white;
 
 /* Start Import Fonts */
+
 /* Font - Comfortaa */
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 /* Font - Ubuntu */
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 /* Font - Poppins */
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700;800&display=swap');
 /* End Import Fonts */
 
 :root {
@@ -28,7 +29,7 @@ $white: white;
 
 body {
   color: $site-black;
-  font-family: "poppins", serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -203,7 +204,7 @@ main {
         }
 
         .muted-text {
-          font-family: Poppins, serif;
+          font-family: 'Poppins', sans-serif;
           font-size: .8rem;
           font-weight: lighter;
           color: grey;
@@ -225,7 +226,7 @@ main {
   }
 
   .more-skills {
-    font-family: Poppins, serif;
+    font-family: 'Poppins', sans-serif;
     font-size: .7rem;
     font-weight: lighter;
   }
