--- a/css/style.scss
+++ b/css/style.scss
@@ -100,6 +100,7 @@ main {
       .greetings {
         color: $white;
         text-transform: uppercase;
+        font-family: Comfortaa, serif;
         //border: white 1px solid;
       }
 
