--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -27,7 +28,7 @@ body {
 
 /* Target blank icon */
 /* Inspired by: "https://codepen.io/thiagobraga/pen/bhDdn" */
-a[target="_blank"]:after {
+a[target=_blank]:after {
   content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
   margin: 0 3px 0 5px;
 }
@@ -86,7 +87,8 @@ a:visited {
 
 main .hero-area-container {
   min-height: 75vh;
-  background-color: #1e212b;
+  margin-left: auto;
+  margin-right: auto;
 }
 main .hero-area-container .hero-area {
   display: flex;
@@ -105,7 +107,7 @@ main .hero-area-container .hero-area .hero-text {
   color: #ffe74c;
   text-transform: uppercase;
   font-family: Comfortaa, sans-serif;
-  font-weight: lighter;
+  font-weight: normal;
   font-size: 21px;
 }
 main .hero-area-container .hero-area .about-me-summary {
@@ -133,6 +135,7 @@ main .hero-area-container .hero-area .about-me-summary {
 
 .section-title {
   margin-top: 2rem;
+  margin-bottom: 2rem;
   color: #fd3e67;
   font-family: Comfortaa, serif;
   font-size: 25px;
@@ -168,14 +171,7 @@ main .hero-area-container .hero-area .about-me-summary {
   max-height: 68px;
   max-width: 60px;
 }
-#skills .ml-skills-container {
-  display: flex;
-  flex-direction: column;
-}
 #skills .ml-skills-container .card {
-  max-width: 255px;
-  width: 255px;
-  max-height: 94px;
   height: 94px;
   border: #ffe74c 1px solid;
   border-radius: 5px;
@@ -204,21 +200,14 @@ main .hero-area-container .hero-area .about-me-summary {
   font-weight: normal;
   text-transform: none;
 }
-#skills .ml-skills-container .card:nth-child(even) {
-  align-self: flex-end;
-}
-#skills .ml-skills-container .card:nth-child(even) .card-body {
-  text-align: right;
-  align-items: flex-end;
-}
 #skills .more-skills {
   font-family: "Poppins", sans-serif;
-  font-size: 0.7rem;
+  font-size: 1rem;
   color: #1e212b;
 }
 
 section#projects {
-  border-color: #1e212b;
+  border: 0.1px solid #1e212b;
 }
 
 #projects .space-equally-vertically {
@@ -263,7 +252,7 @@ section#projects {
 #contact .form-container textarea {
   border-bottom: 2px solid #645dd7;
 }
-#contact .form-container button[type="submit"] {
+#contact .form-container button[type=submit] {
   background-color: #645dd7;
   border-color: #645dd7;
   width: 70%;
@@ -304,6 +293,41 @@ footer p {
   width: 100%;
   font-family: Ubuntu, serif;
   font-size: 0.7rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-area-container {
+    background-image: url("../img/undraw_Maintenance_re_59vn.png");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: auto 70vh;
+    max-width: 720px;
+  }
+
+  .hero-text {
+    font-weight: bold;
+    font-size: 25px;
+  }
+
+  .about-me-summary {
+    font-size: 15px;
+    width: 65%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .hero-area-container {
+    max-width: 960px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .hero-area-container {
+    max-width: 1140px;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  .hero-area-container {
+    max-width: 1320px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
